<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registration_view_root"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".conferences.view.fragments.UserAuthFragment">

    <include layout="@layout/view_into_faded_background" />

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_register_name_text"
            android:theme="@style/AppTheme.TextEdit"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <EditText
            android:id="@+id/et_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress"
            android:hint="@string/user_register_mail_text"
            android:theme="@style/AppTheme.TextEdit"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <EditText
            android:id="@+id/et_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebPassword"
            android:hint="@string/user_register_password1_text"
            android:theme="@style/AppTheme.TextEdit"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />
        <EditText
            android:id="@+id/et_user_password_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebPassword"
            android:hint="@string/user_register_password2_text"
            android:theme="@style/AppTheme.TextEdit"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <Button
            android:layout_weight="1"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@color/colorAccent"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:textColor="@color/colorTextPrimaryLight"
            android:textAllCaps="true"
            android:typeface="sans"
            android:textSize="@dimen/login_page_text_size"
            android:text="@string/user_invite_to_register_text"/>
    </LinearLayout>
</RelativeLayout>

