<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intro_view_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".conferences.view.fragments.UserAuthFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType = "centerCrop"
            android:src="@drawable/background_intro_page_image"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.7"
            android:scaleType="fitXY"
            android:src="@android:color/black"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:paddingBottom="70dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_appicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="40dp"
                android:text="@string/intro_string"
                android:textColor="@color/colorTextPrimaryLight"
                android:textSize="@dimen/login_page_text_size" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:divider="@drawable/shape_divider"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/go_register_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/user_invite_to_register_text"
            android:textAllCaps="true"
            android:textColor="@color/colorTextPrimaryLight"
            android:textSize="@dimen/login_page_text_size"
            android:typeface="sans" />

        <Button
            android:id="@+id/go_login_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/user_invite_to_login_text"
            android:textAllCaps="true"
            android:textColor="@color/colorTextPrimaryLight"
            android:textSize="@dimen/login_page_text_size"
            android:typeface="sans" />

    </LinearLayout>

</RelativeLayout>

